<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HDeck</string>
    <string name="search" tools:ignore="MissingTranslation">Search</string>
    <string name="de" translatable="false">Deutsch</string>
    <string name="en" translatable="false">English</string>
    <string name="es_ES" translatable="false">Español</string>
    <string name="es_MX" translatable="false">Español(Mexicano)</string>
    <string name="fr" translatable="false">Français</string>
    <string name="it" translatable="false">Italiano</string>
    <string name="ja" translatable="false">日本</string>
    <string name="ko" translatable="false">한국인</string>
    <string name="pl" translatable="false">Polski</string>
    <string name="pt" translatable="false">Português</string>
    <string name="ru" translatable="false">Русский</string>
    <string name="th" translatable="false">ไทย</string>
    <string name="zh" translatable="false">中国人</string>
    <string name="try_out">Try it out</string>
    <string name="card_set" tools:ignore="MissingTranslation">Set:</string>
    <string name="card_heroClass" tools:ignore="MissingTranslation">Class:</string>
    <string name="card_rarity" tools:ignore="MissingTranslation">Rarity:</string>
    <string name="card_type" tools:ignore="MissingTranslation">Type:</string>
    <string name="card_artistName" tools:ignore="MissingTranslation">Artist:</string>
    <string name="bubble_mana" tools:ignore="MissingTranslation">Mana</string>
    <string name="bubble_attack" tools:ignore="MissingTranslation">Attack</string>
    <string name="bubble_health" tools:ignore="MissingTranslation">Health</string>
    <string name="bubble_name" tools:ignore="MissingTranslation">Name</string>
    <string name="bubble_class" tools:ignore="MissingTranslation">Class</string>

    <string name="bubble_asc" tools:ignore="MissingTranslation">Ascending</string>
    <string name="bubble_desc" tools:ignore="MissingTranslation">Descending</string>
</resources>